Update content based on claude update